--- a/prescription_management/views/views.xml
+++ b/prescription_management/views/views.xml
@@ -139,6 +139,52 @@
         </field>
     </record>
 
+
+    <!-- list View for Services -->
+    <record id="view_clinic_service_list" model="ir.ui.view">
+        <field name="name">clinic.service.list</field>
+        <field name="model">clinic.service</field>
+        <field name="arch" type="xml">
+            <list>
+                <field name="service_name"/>
+                <field name="price"/>
+            </list>
+        </field>
+    </record>
+
+    <!-- Form View for Services -->
+    <record id="view_clinic_service_form" model="ir.ui.view">
+        <field name="name">clinic.service.form</field>
+        <field name="model">clinic.service</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="service_name"/>
+                        <field name="price"/>
+                        <field name="description"/>
+                        <field name="active"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <!-- Action for Services -->
+    <record id="action_clinic_service" model="ir.actions.act_window">
+        <field name="name">Dịch vụ</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">clinic.service</field>
+        <field name="view_mode">list,form</field>
+    </record>
+
+    <!-- Menu for Services -->
+    <menuitem id="menu_clinic_service"
+              name="Dịch vụ"
+              parent="menu_pharmacy_root"
+              action="action_clinic_service"
+              sequence="3"/>
+
     <record id="action_pharmacy_product" model="ir.actions.act_window">
         <field name="name">Kho dược phẩm</field>
         <field name="res_model">pharmacy.product</field>
