--- a/clinic_appointment_booking/views/website_templates.xml
+++ b/clinic_appointment_booking/views/website_templates.xml
@@ -17,6 +17,14 @@
                                     <p class="text-muted">Vui lòng điền đầy đủ thông tin để đặt lịch hẹn khám</p>
                                 </div>
 
+                                <!-- Error message display -->
+                                <t t-if="error">
+                                    <div class="alert alert-danger mb-4">
+                                        <i class="fa fa-exclamation-circle mr-2"></i>
+                                        <span t-esc="error"/>
+                                    </div>
+                                </t>
+
                                 <form action="/appointment/submit" method="post" class="mb-3" id="appointment_form">
                                     <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
 
@@ -72,7 +80,7 @@
                                                     </div>
                                                     <input type="email" name="email" id="email" class="form-control" placeholder="example@email.com"/>
                                                 </div>
-                                                <small class="text-muted">Nhận thông báo nhắc nhở lịch hẹn qua email</small>
+                                                <small class="text-muted">Nhận thông báo xác nhận qua email</small>
                                             </div>
                                         </div>
 
@@ -94,8 +102,10 @@
                                                     <div class="input-group-prepend">
                                                         <span class="input-group-text"><i class="fa fa-clock-o"></i></span>
                                                     </div>
-                                                    <input type="time" name="appointment_time" id="appointment_time" class="form-control" required="1"/>
+                                                    <input type="time" name="appointment_time" id="appointment_time" class="form-control"
+                                                       required="1" min="08:00" max="21:00"/>
                                                 </div>
+                                                <small class="text-muted">Thời gian hẹn từ 8:00 sáng đến 21:00 tối</small>
                                             </div>
                                             <div class="form-group mb-3">
                                                 <label for="doctor_id" class="form-label">Bác sĩ <span class="text-danger">*</span></label>
@@ -125,6 +135,14 @@
                                                     </select>
                                                 </div>
                                                 <small class="text-muted">Bạn có thể chọn phòng khám hoặc để trống</small>
+                                            </div>
+
+                                            <!-- Availability check -->
+                                            <div id="availability_check_container" class="mt-3 mb-3" style="display: none;">
+                                                <button type="button" id="check_availability_btn" class="btn btn-outline-primary btn-sm">
+                                                    <i class="fa fa-calendar-check-o mr-1"></i> Kiểm tra trạng thái
+                                                </button>
+                                                <div id="availability_result" class="mt-2"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -216,9 +234,20 @@
 
                         // Validate email if provided
                         var email = $('#email').val();
-                        if (email &amp;&amp; !email.match(/^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/)) {
+                        if (email &amp;&amp; !email.match(/^[\w\-\.]+@([\w\-]+\.)+[\w\-]{2,4}$/)) {
                             $('#email').addClass('is-invalid');
                             isValid = false;
+                        }
+
+                        // Validate appointment time (8:00 - 21:00)
+                        var time = $('#appointment_time').val();
+                        if (time) {
+                            var hour = parseInt(time.split(':')[0]);
+                            if (hour &lt; 8 || hour &gt;= 21) {
+                                $('#appointment_time').addClass('is-invalid');
+                                alert('Thời gian hẹn phải từ 8:00 sáng đến 21:00 tối.');
+                                isValid = false;
+                            }
                         }
 
                         if (!isValid) {
@@ -227,6 +256,67 @@
                                 scrollTop: $('.is-invalid').first().offset().top - 100
                             }, 500);
                         }
+                    });
+
+                    // Show availability check when doctor, date and time are selected
+                    function updateAvailabilityCheckVisibility() {
+                        var doctor = $('#doctor_id').val();
+                        var date = $('#appointment_date').val();
+                        var time = $('#appointment_time').val();
+
+                        if (doctor &amp;&amp; date &amp;&amp; time) {
+                            $('#availability_check_container').show();
+                        } else {
+                            $('#availability_check_container').hide();
+                            $('#availability_result').html('');
+                        }
+                    }
+
+                    $('#doctor_id, #appointment_date, #appointment_time, #room_id').on('change', function() {
+                        updateAvailabilityCheckVisibility();
+                    });
+
+                    // Availability check button
+                    $('#check_availability_btn').on('click', function() {
+                        var doctor_id = $('#doctor_id').val();
+                        var appointment_date = $('#appointment_date').val();
+                        var appointment_time = $('#appointment_time').val();
+                        var room_id = $('#room_id').val();
+
+                        $('#availability_result').html('&lt;div class="text-center"&gt;&lt;i class="fa fa-spinner fa-spin"&gt;&lt;/i&gt; Đang kiểm tra...&lt;/div&gt;');
+
+                        $.ajax({
+                            url: '/appointment/check_availability',
+                            type: 'POST',
+                            dataType: 'json',
+                            contentType: 'application/json',
+                            data: JSON.stringify({
+                                'jsonrpc': '2.0',
+                                'method': 'call',
+                                'params': {
+                                    'doctor_id': doctor_id,
+                                    'appointment_date': appointment_date,
+                                    'appointment_time': appointment_time,
+                                    'room_id': room_id
+                                }
+                            }),
+                            success: function(data) {
+                                if (data.result) {
+                                    var result = data.result;
+                                    if (result.status === 'success') {
+                                        $('#availability_result').html('&lt;div class="alert alert-success"&gt;' +
+                                            '&lt;i class="fa fa-check-circle mr-2"&gt;&lt;/i&gt;' + result.message + '&lt;/div&gt;');
+                                    } else {
+                                        $('#availability_result').html('&lt;div class="alert alert-danger"&gt;' +
+                                            '&lt;i class="fa fa-exclamation-circle mr-2"&gt;&lt;/i&gt;' + result.message + '&lt;/div&gt;');
+                                    }
+                                }
+                            },
+                            error: function() {
+                                $('#availability_result').html('&lt;div class="alert alert-danger"&gt;' +
+                                    '&lt;i class="fa fa-exclamation-circle mr-2"&gt;&lt;/i&gt;Đã xảy ra lỗi khi kiểm tra. Vui lòng thử lại.&lt;/div&gt;');
+                            }
+                        });
                     });
                 });
             </script>
