--- a/medical_management/views/website_templates_image.xml
+++ b/medical_management/views/website_templates_image.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Danh sách hình ảnh -->
+    <!-- Danh sách hình ảnh - Updated for image display -->
     <template id="medical_images_list" name="Medical Images List">
         <t t-call="medical_management.medical_layout">
             <div class="card">
@@ -20,7 +20,8 @@
                                     </div>
                                     <div class="card-body">
                                         <t t-if="image.Img">
-                                            <img t-att-src="'data:image/png;base64,%s' % image.Img" class="img-fluid mb-2"/>
+                                            <!-- Updated image rendering with proper handling -->
+                                            <img t-att-src="image.Img and ('data:image/*;base64,%s' % (image.Img.decode('utf-8') if isinstance(image.Img, bytes) else image.Img))" class="img-fluid mb-2"/>
                                         </t>
                                         <t t-else="">
                                             <div class="text-center p-4 bg-light">
@@ -48,7 +49,7 @@
         </t>
     </template>
 
-    <!-- Chi tiết hình ảnh -->
+    <!-- Chi tiết hình ảnh - Updated for image display -->
     <template id="medical_image_detail" name="Medical Image Detail">
         <t t-call="medical_management.medical_layout">
             <div class="card">
@@ -103,7 +104,8 @@
                                 </div>
                                 <div class="card-body text-center">
                                     <t t-if="image.Img">
-                                        <img t-att-src="'data:image/png;base64,%s' % image.Img" class="img-fluid"/>
+                                        <!-- Fixed image display -->
+                                        <img t-att-src="image.Img and ('data:image/*;base64,%s' % (image.Img.decode('utf-8') if isinstance(image.Img, bytes) else image.Img))" class="img-fluid"/>
                                     </t>
                                     <t t-else="">
                                         <div class="text-center p-5 bg-light">
@@ -191,6 +193,8 @@
                                     <input type="file" class="custom-file-input" name="image_file" id="image_file" accept="image/*"/>
                                     <label class="custom-file-label" for="image_file">Chọn file...</label>
                                 </div>
+                                <!-- Preview section -->
+                                <div class="mt-3 image-preview"></div>
                             </div>
                         </div>
 
